Añadiendo vistas, rutas y data

--- a/src/app/pages/elementos/elementos.component.html
+++ b/src/app/pages/elementos/elementos.component.html
@@ -1,3 +1,9 @@
-<p>
-  elementos works!
-</p>
+<h1>Chemical Elements</h1>
+<hr>
+
+<ul class="list-group">
+  <a [routerLink]="['/elemento', 'CRI']" class="list-group-item list-group-item-action animated fadeIn fast">
+    Element
+  </a>
+
+</ul>
